--- a/po/it.po
+++ b/po/it.po
@@ -1,14 +1,14 @@
 # Italian translation for gst-plugins-base package of GStreamer project.
-# Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009 GStreamer team
+# Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009, 2010 GStreamer team
 # This file is distributed under the same license as the gst-plugins-base package.
-# Luca Ferretti <elle.uca@infinito.it>, 2004, 2005, 2006, 2007, 2008, 2009.
+# Luca Ferretti <elle.uca@infinito.it>, 2004, 2005, 2006, 2007, 2008, 2009, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.24.2\n"
+"Project-Id-Version: gst-plugins-base 0.10.28.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-06-26 17:54+0100\n"
-"PO-Revision-Date: 2009-09-17 23:19+0200\n"
+"POT-Creation-Date: 2010-07-01 01:54+0100\n"
+"PO-Revision-Date: 2010-04-28 14:27+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -192,9 +192,9 @@ msgstr "Risultano mancanti entrambi gli elementi «autovideosink» e «%s»."
 msgid "The autovideosink element is missing."
 msgstr "Risulta mancante l'elemento «autovideosink»."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Configured videosink %s is not working."
-msgstr "L'elemento «autovideosink» non è operativo."
+msgstr "L'elemento videosink «%s» non è operativo."
 
 #, c-format
 msgid "Both autovideosink and %s elements are not working."
@@ -216,9 +216,9 @@ msgstr "Risultano mancanti entrambi gli elementi «autoaudiosink» e «%s»."
 msgid "The autoaudiosink element is missing."
 msgstr "Risulta mancante l'elemento «autoaudiosink»."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Configured audiosink %s is not working."
-msgstr "L'elemento «autoaudiosink» non è operativo."
+msgstr "L'elemento audiosink «%s» non è operativo."
 
 #, c-format
 msgid "Both autoaudiosink and %s elements are not working."
@@ -227,9 +227,8 @@ msgstr "Entrambi gli elementi «autoaudiosink» e «%s» non sono operativi."
 msgid "The autoaudiosink element is not working."
 msgstr "L'elemento «autoaudiosink» non è operativo."
 
-#, fuzzy
 msgid "Can't play a text file without video or visualizations."
-msgstr "Impossibile riprodurre un file di testo senza video."
+msgstr "Impossibile riprodurre un file di testo senza video o visualizzazioni."
 
 #, c-format
 msgid "No decoder available for type '%s'."
@@ -507,32 +506,3 @@ msgstr "Il device «%s» è già in uso."
 #, c-format
 msgid "Could not open device \"%s\" for reading and writing."
 msgstr "Impossibile aprire il device «%s» in lettura e scrittura."
-
-#~ msgid "Could not create \"decodebin2\" element."
-#~ msgstr "Impossibile creare l'elemento «decodebin2»."
-
-#~ msgid "Could not create \"queue2\" element."
-#~ msgstr "Impossibile creare l'elemento «queue2»."
-
-#~ msgid "Could not create \"typefind\" element."
-#~ msgstr "Impossibile creare l'elemento «typefind»."
-
-# NOTA NOTA NOTA
-# questo messaggio è stanissimo
-# Subpictures sono cose tipiche dei dvd (vedi google)
-# e sembra che non ci sia una traduzione in italiano
-#~ msgid "Can't display both text subtitles and subpictures."
-#~ msgstr "Impossibile mostrare sottotitoli di testo e subpicture."
-
-# sarebbe da controllare perché Temp è maiuscolo...
-#~ msgid "No Temp directory specified."
-#~ msgstr "Nessuna directory temporanea specificata."
-
-#~ msgid "Could not create temp file \"%s\"."
-#~ msgstr "Impossibile creare il file temporaneo «%s»."
-
-#~ msgid "Could not open file \"%s\" for reading."
-#~ msgstr "Impossibile aprire il file «%s» in lettura."
-
-#~ msgid "Internal data flow error."
-#~ msgstr "Errore interno nel flusso di dati."
